[package]
name = "tlong"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bs58 = "0.5.1"
dotenvy = "0.15.7"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
url = "2.5.4"
