[package]
name = "tlong"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
bs58 = "0.5.1"
chrono = "0.4.39"
dotenvy = "0.15.7"
r2d2 = "0.8.10"
redis = { version = "0.28.2", features = ["r2d2", "tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["compression-gzip", "cors", "timeout", "trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
url = "2.5.4"
